Library overriding a linked collection within a library overridden collection will not stay saved #94226

Closed
opened 2021-12-18 15:53:15 +01:00 by Kristian Halvorsen · 5 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
(also tested in 2.93 with same issue observed)

Short description of error

Library overriding a linked collection (b) with a linked collection (a) within it, and then library overriding linked collection (a),
results in linked collection (a) not staying overridden after saving and reloading the file, but instead returning to it's initial linked collection state.
( linked collection (a) is not already overridden in the file linked collection (b) was linked from )

make library override.png

additional observation:
the overridden collections, while removed from the scene, seem to stay in the file even after the override has reverted,
but are removed (as orphan data assumingly) on the second save and reload, with the objects within the collections disappearing on the third.

Exact steps for others to reproduce the error

From blends:
Unzip the 3 blends to the same folder
Open "Linked and overridden Collection_b with linked Collection_a"
library override Collection_a
save and reload and see Collection_a reverting from being overridden.
override_within_override.zip

Full steps:
Save a file with a collection (a)
In a new file, link the collection (a) within another collection (b) and save the file
In another new file, link and library override collection (b), then library override the collection (a) within it
save and reload and see collection (a) reverting from being overridden.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.96 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` (also tested in 2.93 with same issue observed) **Short description of error** Library overriding a linked collection (b) with a linked collection (a) within it, and then library overriding linked collection (a), results in linked collection (a) not staying overridden after saving and reloading the file, but instead returning to it's initial linked collection state. ( linked collection (a) is not already overridden in the file linked collection (b) was linked from ) ![make library override.png](https://archive.blender.org/developer/F12762785/make_library_override.png) additional observation: the overridden collections, while removed from the scene, seem to stay in the file even after the override has reverted, but are removed (as orphan data assumingly) on the second save and reload, with the objects within the collections disappearing on the third. **Exact steps for others to reproduce the error** From blends: Unzip the 3 blends to the same folder Open "Linked and overridden Collection_b with linked Collection_a" library override Collection_a save and reload and see Collection_a reverting from being overridden. [override_within_override.zip](https://archive.blender.org/developer/F12761213/override_within_override.zip) Full steps: Save a file with a collection (a) In a new file, link the collection (a) within another collection (b) and save the file In another new file, link and library override collection (b), then library override the collection (a) within it save and reload and see collection (a) reverting from being overridden.

Added subscriber: @krisoyo

Added subscriber: @krisoyo
Kristian Halvorsen changed title from Library overriding a linked collection within a library overridden collection will not save to Library overriding a linked collection within a library overridden collection will not stay saved 2021-12-19 08:38:18 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Confirmed' to: 'Archived'

Changed status from 'Confirmed' to: 'Archived'

No bug here, you are trying to make a library override of a liboverride of an empty object instantiating a linked collection from a different library, within a liboverride of a collection. This will not work since it will try to modify the objects owned by your liboverride of Collection_a from your Collection_b with linked Collection_a.blend file, this is not supported. Will add a check for those case in the operator.

You should instead properly link Collection_a in the viewlayer of your scene in the Collection_b with linked Collection_a.blend file, get rid of the empty there, and then in your final file you can override everything in expected way. But this remains a fairly complex case with inter-related overrides of IDs from several different libraries, not recommended at all.

TL;DR: Do not expect to be able to liboverride instantiating empties using linked collections from other .blend files inside other liboverrides... You can make it work manually, but such exotic, non recommended nightmares with dependencies between several libraries will not be supported by automatic, high-level tools like liboverride hierarchies handling, and you should expect issues.

No bug here, you are trying to make a library override of *a liboverride of an empty object instantiating a linked collection from a different library*, within a liboverride of a collection. This will not work since it will try to modify the objects owned by your liboverride of `Collection_a` from your `Collection_b with linked Collection_a.blend` file, this is not supported. Will add a check for those case in the operator. You should instead properly link `Collection_a` in the viewlayer of your scene in the `Collection_b with linked Collection_a.blend` file, get rid of the empty there, and then in your final file you can override everything in expected way. But this remains a fairly complex case with inter-related overrides of IDs from several different libraries, not recommended at all. TL;DR: Do not expect to be able to liboverride instantiating empties using linked collections from other .blend files inside other liboverrides... You can make it work manually, but such exotic, non recommended nightmares with dependencies between several libraries will not be supported by automatic, high-level tools like liboverride hierarchies handling, and you should expect issues.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94226
No description provided.